appview,spindle: group logs based on step
spindle logs now inform the beginning of a new step using a "control"
message, with logs categorized under a "data" message.

the appview in turn, is able to group logs by step:

- upon encountering a control message, it begins a new step (a
  collapsible details tag)
- upon encontering a data message, it adds the log line into the last
  encountered step

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/settings.html
+++ b/appview/pages/templates/repo/settings.html
@@ -91,10 +91,9 @@
             <select id="spindle" name="spindle" required class="p-1 border border-gray-200 bg-white dark:bg-gray-800 dark:text-white dark:border-gray-700">
                 <option
                     value=""
-                    disabled
                     selected
                 >
-                Choose a spindle
+                None
                 </option>
                 {{ range .Spindles }}
                     <option
