--- a/appview/pages/templates/repo/pipelines/pipelines.html
+++ b/appview/pages/templates/repo/pipelines/pipelines.html
@@ -8,17 +8,7 @@
 
 {{ define "repoContent" }}
 <div class="flex justify-between items-center gap-4">
-  <div class="flex gap-4">
-  </div>
-
-</div>
-<div class="error" id="issues"></div>
-{{ end }}
-
-{{ define "repoAfter" }}
-  <section
-      class="w-full flex flex-col gap-2 mt-2"
-  >
+  <div class="w-full flex flex-col gap-2">
   {{ range .Pipelines }}
     {{ block "pipeline" (list $ .) }} {{ end }}
   {{ else }}
@@ -26,13 +16,15 @@
       No pipelines run for this repository.
     </p>
   {{ end }}
-  </section>
+  </div>
+</div>
 {{ end }}
+
 
 {{ define "pipeline" }}
   {{ $root := index . 0 }}
   {{ $p := index . 1 }}
-  <div class="py-4 px-6 bg-white dark:bg-gray-800 dark:text-white">
+  <div class="py-2 bg-white dark:bg-gray-800 dark:text-white">
     {{ block "pipelineHeader" $ }} {{ end }}
   </div>
 {{ end }}
