nix: remove uglify-js dependency
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -9,7 +9,7 @@
             />
             <meta name="htmx-config" content='{"includeIndicatorStyles": false}'>
             <script src="/static/htmx.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/htmx-ext-ws@2.0.2"></script>
+            <script src="/static/htmx-ext-ws.min.js"></script>
             <link rel="stylesheet" href="/static/tw.css?{{ cssContentHash }}" type="text/css" />
             <title>{{ block "title" . }}{{ end }} · tangled</title>
             {{ block "extrameta" . }}{{ end }}
