--- a/appview/pages/templates/repo/pipelines/fragments/logLine.html
+++ b/appview/pages/templates/repo/pipelines/fragments/logLine.html
@@ -1,6 +1,4 @@
 {{ define "repo/pipelines/fragments/logLine" }}
-  <div id="step-body-{{ .Id }}" hx-swap-oob="beforeend">
-    <p>{{ .Content }}</p>
-  </div>
+<div id="step-body-{{ .Id }}" hx-swap-oob="beforeend" class="whitespace-pre"><p>{{ .Content }}</p></div>
 {{ end }}
 
