--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -3,7 +3,7 @@
 {{ define "extrameta" }}
     {{ $title := "pulls"}}
     {{ $url := printf "https://tangled.sh/%s/pulls" .RepoInfo.FullName }}
-    
+
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo "Title" $title "Url" $url) }}
 {{ end }}
 
@@ -54,7 +54,7 @@
                         <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
                     </a>
                 </div>
-                <p class="text-sm text-gray-500 dark:text-gray-400">
+                <p class="text-sm text-gray-500 dark:text-gray-400 flex flex-wrap items-center gap-1">
                     {{ $owner := index $.DidHandleMap .OwnerDid }}
                     {{ $bgColor := "bg-gray-800 dark:bg-gray-700" }}
                     {{ $icon := "ban" }}
@@ -75,11 +75,11 @@
                         <span class="text-white">{{ .State.String }}</span>
                     </span>
 
-                    <span>
-                        <a href="/{{ $owner }}" class="dark:text-gray-300">{{ $owner }}</a>
+                    <span class="ml-1">
+                        {{ template "user/fragments/picHandle" $owner }}
                     </span>
 
-                    <span class="before:content-['·']">
+                    <span>
                         <time>
                             {{ .Created | timeFmt }}
                         </time>
