--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -60,20 +60,16 @@
                     {{ if .Repo }}
                         {{ $userHandle :=  index $.DidHandleMap .Repo.Did }}
                         <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300">
-                                <a
-                                    href="/{{ $userHandle }}"
-                                    class="no-underline hover:underline"
-                                    >{{ $userHandle | truncateAt30 }}</a
-                                >
+                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
+                                {{ template "user/fragments/picHandle" $userHandle }}
                                 {{ if .Source }}
                                     forked
                                     <a
                                         href="/{{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}"
                                         class="no-underline hover:underline"
                                     >
-                                        {{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}
-                                    </a>
+                                        {{ index $.DidHandleMap .Source.Did }}/{{ .Source.Name }}</a
+                                    >
                                     to
                                     <a
                                         href="/{{ $userHandle }}/{{ .Repo.Name }}"
@@ -98,18 +94,10 @@
                         {{ $userHandle :=  index $.DidHandleMap .Follow.UserDid }}
                         {{ $subjectHandle :=  index $.DidHandleMap .Follow.SubjectDid }}
                         <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300">
-                                <a
-                                    href="/{{ $userHandle }}"
-                                    class="no-underline hover:underline"
-                                    >{{ $userHandle | truncateAt30 }}</a
-                                >
+                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
+                                {{ template "user/fragments/picHandle" $userHandle }}
                                 followed
-                                <a
-                                    href="/{{ $subjectHandle }}"
-                                    class="no-underline hover:underline"
-                                    >{{ $subjectHandle | truncateAt30 }}</a
-                                >
+                                {{ template "user/fragments/picHandle" $subjectHandle }}
                                 <time
                                     class="text-gray-700 dark:text-gray-400 text-xs"
                                     >{{ .Follow.FollowedAt | timeFmt }}</time
@@ -120,12 +108,8 @@
                         {{ $starrerHandle :=  index $.DidHandleMap .Star.StarredByDid }}
                         {{ $repoOwnerHandle :=  index $.DidHandleMap .Star.Repo.Did }}
                         <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300">
-                                <a
-                                    href="/{{ $starrerHandle }}"
-                                    class="no-underline hover:underline"
-                                    >{{ $starrerHandle | truncateAt30 }}</a
-                                >
+                            {{ template "user/fragments/picHandle" $starrerHandle }}
+                            <p class="text-gray-600 dark:text-gray-300 flex items-center gap-2">
                                 starred
                                 <a
                                     href="/{{ $repoOwnerHandle }}/{{ .Star.Repo.Name }}"
