--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -7,18 +7,6 @@
     {{ template "repo/fragments/og" (dict "RepoInfo" .RepoInfo) }}
 {{ end }}
 
-{{ define "repoLanguages" }}
-    <div class="flex gap-[3px] -m-6 mb-6 overflow-hidden rounded-t">
-        {{ range $value := .Languages }}
-            <div
-                title="{{ $value.Name }} {{ printf "%.1f" $value.Percentage }}%"
-                class="h-2"
-                style="background-color: {{ $value.Color }}; width: {{ $value.Percentage }}%"
-            ></div>
-        {{ end }}
-    </div>
-{{ end }}
-
 {{ define "repoContent" }}
     <main>
         {{ if .Languages }}
@@ -44,6 +32,19 @@
         </div>
     </main>
 {{ end }}
+
+{{ define "repoLanguages" }}
+    <div class="flex gap-[1px] -m-6 mb-6 overflow-hidden rounded-t">
+        {{ range $value := .Languages }}
+            <div
+                title='{{ or $value.Name "Other" }} {{ printf "%.1f" $value.Percentage }}%'
+                class="h-[4px] rounded-full"
+                style="background-color: {{ $value.Color }}; width: {{ $value.Percentage }}%"
+            ></div>
+        {{ end }}
+    </div>
+{{ end }}
+
 
 {{ define "branchSelector" }}
   <div class="flex gap-2 items-center items-stretch justify-center">
