--- a/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/summarizedPullHeader.html
@@ -1,32 +1,42 @@
 {{ define "repo/pulls/fragments/summarizedHeader" }}
-  <div class="flex text-sm items-center justify-between w-full">
-    <div class="flex items-center gap-2 min-w-0 flex-1 pr-2">
-      <div class="flex-shrink-0">
-        {{ template "repo/pulls/fragments/summarizedPullState" .State }}
-      </div>
-      <span class="truncate text-sm text-gray-800 dark:text-gray-200">
-        <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
-        {{ .Title }}
-      </span>
-    </div>
-
-    <div class="flex-shrink-0">
-      {{ $latestRound := .LastRoundNumber }}
-      {{ $lastSubmission := index .Submissions $latestRound }}
-      {{ $commentCount := len $lastSubmission.Comments }}
-      <span>
-        <div class="inline-flex items-center gap-2">
-          {{ i "message-square" "w-3 h-3 md:hidden" }}
-          {{ $commentCount }}
-          <span class="hidden md:inline">comment{{if ne $commentCount 1}}s{{end}}</span>
+  {{ $pull := index . 0 }}
+  {{ $pipeline := index . 1 }}
+  {{ with $pull }}
+    <div class="flex text-sm items-center justify-between w-full">
+      <div class="flex items-center gap-2 min-w-0 flex-1 pr-2">
+        <div class="flex-shrink-0">
+          {{ template "repo/pulls/fragments/summarizedPullState" .State }}
         </div>
-      </span>
-      <span class="mx-2 before:content-['·'] before:select-none"></span>
-      <span>
-        <span class="hidden md:inline">round</span>
-        <span class="font-mono">#{{ $latestRound }}</span>
-      </span>
+        <span class="truncate text-sm text-gray-800 dark:text-gray-200">
+          <span class="text-gray-500 dark:text-gray-400">#{{ .PullId }}</span>
+          {{ .Title }}
+        </span>
+      </div>
+
+      <div class="flex-shrink-0 flex items-center">
+        {{ $latestRound := .LastRoundNumber }}
+        {{ $lastSubmission := index .Submissions $latestRound }}
+        {{ $commentCount := len $lastSubmission.Comments }}
+        {{ if $pipeline }}
+          <div class="inline-flex items-center gap-2">
+            {{ template "repo/pipelines/fragments/pipelineSymbol" $pipeline }}
+            <span class="mx-2 before:content-['·'] before:select-none"></span>
+          </div>
+        {{ end }}
+        <span>
+          <div class="inline-flex items-center gap-2">
+            {{ i "message-square" "w-3 h-3 md:hidden" }}
+            {{ $commentCount }}
+            <span class="hidden md:inline">comment{{if ne $commentCount 1}}s{{end}}</span>
+          </div>
+        </span>
+        <span class="mx-2 before:content-['·'] before:select-none"></span>
+        <span>
+          <span class="hidden md:inline">round</span>
+          <span class="font-mono">#{{ $latestRound }}</span>
+        </span>
+      </div>
     </div>
-  </div>
+  {{ end }}
 {{ end }}
 
