--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -27,7 +27,7 @@
   </div>
   <a
       href="/{{ .RepoInfo.FullName }}/issues/new"
-      class="btn text-sm flex items-center justify-center gap-2 no-underline hover:no-underline"
+      class="btn-create text-sm flex items-center justify-center gap-2 no-underline hover:no-underline hover:text-white"
       >
       {{ i "circle-plus" "w-4 h-4" }}
       <span>new</span>
