--- a/appview/pages/templates/repo/pulls/new.html
+++ b/appview/pages/templates/repo/pulls/new.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="flex justify-start items-center gap-2 mt-4">
-                <button type="submit" class="btn flex items-center gap-2">
+                <button type="submit" class="btn-create flex items-center gap-2">
                     {{ i "git-pull-request-create" "w-4 h-4" }}
                     create pull
                     <span id="create-pull-spinner" class="group">
