--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -34,7 +34,7 @@
         </div>
         <a
             href="/{{ .RepoInfo.FullName }}/pulls/new"
-            class="btn text-sm flex items-center gap-2 no-underline hover:no-underline"
+            class="btn-create text-sm flex items-center gap-2 no-underline hover:no-underline hover:text-white"
         >
             {{ i "git-pull-request-create" "w-4 h-4" }}
             <span>new</span>
