appview/pages: fix CI times in tooltip
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pipelines/fragments/tooltip.html
+++ b/appview/pages/templates/repo/pipelines/fragments/tooltip.html
@@ -10,7 +10,7 @@
           {{ $lastStatus := $all.Latest }}
           {{ $kind := $lastStatus.Status.String }}
 
-          {{ $t := $pipeline.TimeTaken }}
+          {{ $t := .TimeTaken }}
           {{ $time := "" }}
           {{ if $t }}
             {{ $time = durationFmt $t }}
