--- a/appview/pages/templates/user/fragments/picHandle.html
+++ b/appview/pages/templates/user/fragments/picHandle.html
@@ -3,7 +3,7 @@
     <img
         src="{{ tinyAvatar . }}"
         alt="{{ . }}"
-        class="rounded-full h-6 w-6 mr-1"
+        class="rounded-full h-6 w-6 mr-1 border border-gray-300 dark:border-gray-700"
     />
     {{ . | truncateAt30 }}
 </a>
