appview/pages: use consistent time component
Creates a new template fragment, repo/fragments/time, that is a component based on the <time> HTML element. The <time> element is already used for most datetimes, but inconsistently; some define `title` attributes and/or `datetime` attributes, most don't. The goal here is to standardize with a single component so every date has a consistent interaction. The datetime is ISO 8601 formatted as per the spec, the `title` (shown on hover) is a modified long format similar to GitHub's, and the content is a relative format %s ago (`timeFmt` - two `shortTimeFmt` variants also exist to preserve existing behavior).

--- a/appview/pages/templates/knot.html
+++ b/appview/pages/templates/knot.html
@@ -26,11 +26,11 @@
     </dd>
     
     <dt class="font-bold">opened</dt>
-    <dd>{{ .Registration.Created | timeFmt }}</dd>
+    <dd>{{ template "repo/fragments/time" .Registration.Created }}</dd>
     
     {{ if .Registration.Registered }}
       <dt class="font-bold">registered</dt>
-      <dd>{{ .Registration.Registered | timeFmt }}</dd>
+      <dd>{{ template "repo/fragments/time" .Registration.Registered }}</dd>
     {{ else }}
       <dt class="font-bold">status</dt>
       <dd class="text-yellow-800 dark:text-yellow-200 bg-yellow-100 dark:bg-yellow-900 rounded px-2 py-1 inline-block">
