--- a/appview/pages/templates/repo/branches.html
+++ b/appview/pages/templates/repo/branches.html
@@ -59,7 +59,7 @@
         </td>
         <td class="py-3 whitespace-nowrap text-gray-500 dark:text-gray-400">
           {{ if .Commit }}
-            {{ .Commit.Committer.When | timeFmt }}
+            {{ template "repo/fragments/time" .Commit.Committer.When }}
           {{ end }}
         </td>
       </tr>
@@ -98,7 +98,7 @@
           </a>
         </span>
         <div class="inline-block px-1 select-none after:content-['·']"></div>
-        <span>{{ .Commit.Committer.When | timeFmt }}</span>
+        {{ template "repo/fragments/time" .Commit.Committer.When  }}
       </div>
       {{ end }}
     </div>
