--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -149,9 +149,7 @@
                         </a>
 
                         {{ if .LastCommit }}
-                        <time class="text-xs text-gray-500 dark:text-gray-400"
-                            >{{ timeFmt .LastCommit.When }}</time
-                        >
+                        <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
                         {{ end }}
                     </div>
                 </div>
@@ -172,9 +170,7 @@
                         </a>
 
                         {{ if .LastCommit }}
-                        <time class="text-xs text-gray-500 dark:text-gray-400"
-                            >{{ timeFmt .LastCommit.When }}</time
-                        >
+                        <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
                         {{ end }}
                     </div>
                 </div>
@@ -273,7 +269,7 @@
           >
         </span>
         <div class="inline-block px-1 select-none after:content-['·']"></div>
-        <span>{{ timeFmt .Committer.When }}</span>
+        {{ template "repo/fragments/time" .Committer.When }}
 
         <!-- tags/branches -->
         {{ $tagsForCommit := index $.TagMap .Hash.String }}
@@ -320,7 +316,7 @@
             </a>
             {{ if .Commit }}
             <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·']"></span>
-            <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .Commit.Committer.When }}</time>
+              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .Commit.Committer.When }}</span>
             {{ end }}
             {{ if .IsDefault }}
             <span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·']"></span>
@@ -366,7 +362,7 @@
           </div>
           <div>
             {{ with .Tag }}
-              <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .Tagger.When }}</time>
+              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .Tagger.When }}</span>
             {{ end }}
             {{ if eq $idx 0 }}
               {{ with .Tag }}<span class="px-1 text-gray-500 dark:text-gray-400 select-none after:content-['·']"></span>{{ end }}
