--- a/appview/pages/templates/repo/issues/fragments/issueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/issueComment.html
@@ -11,11 +11,11 @@
           class="text-gray-500 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-400 hover:underline no-underline"
           id="{{ .CommentId }}">
         {{ if .Deleted }}
-          deleted {{ .Deleted | timeFmt }}
+          deleted {{ template "repo/fragments/time" .Deleted }}
         {{ else if .Edited }}
-          edited {{ .Edited | timeFmt }}
+          edited {{ template "repo/fragments/time" .Edited }}
         {{ else }}
-          {{ .Created | timeFmt }}
+          {{ template "repo/fragments/time" .Created }}
         {{ end }}
       </a>
 
