--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -35,9 +35,7 @@
                 {{ $owner := didOrHandle .Issue.OwnerDid .IssueOwnerHandle }}
                 {{ template "user/fragments/picHandleLink" $owner }}
                <span class="select-none before:content-['\00B7']"></span>
-                <time title="{{ .Issue.Created | longTimeFmt }}">
-                    {{ .Issue.Created | timeFmt }}
-                </time>
+                {{ template "repo/fragments/time" .Issue.Created }}
             </span>
         </div>
 
