--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -87,7 +87,7 @@
                           {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "Pipeline" $pipeline "RepoInfo" $.RepoInfo) }}
                         {{ end }}
                     </td>
-                    <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Committer.When }}</td>
+                    <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" $commit.Committer.When }}</td>
                 </tr>
                 {{ end }}
         </tbody>
@@ -163,7 +163,7 @@
                         </a>
                     </span>
                     <div class="inline-block px-1 select-none after:content-['·']"></div>
-                    <span>{{ shortTimeFmt $commit.Committer.When }}</span>
+                    <span>{{ template "repo/fragments/shortTime" $commit.Committer.When }}</span>
 
                     <!-- ci status -->
                     {{ $pipeline := index $.Pipelines .Hash.String }}
