--- a/appview/pages/templates/repo/pulls/fragments/pullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullHeader.html
@@ -31,7 +31,7 @@
             {{ $owner := index $.DidHandleMap .Pull.OwnerDid }}
             {{ template "user/fragments/picHandleLink" $owner }}
             <span class="select-none before:content-['\00B7']"></span>
-            <time>{{ .Pull.Created | timeFmt }}</time>
+            {{ template "repo/fragments/time" .Pull.Created }}
 
             <span class="select-none before:content-['\00B7']"></span>
             <span>
