--- a/appview/pages/templates/repo/tree.html
+++ b/appview/pages/templates/repo/tree.html
@@ -65,7 +65,7 @@
             {{ if .LastCommit}}
             <div class="flex items-end gap-2">
               <span  class="text text-gray-500 dark:text-gray-400 mr-6">{{ .LastCommit.Message }}</span>
-              <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
             </div>
             {{ end }}
         </div>
@@ -85,7 +85,7 @@
             {{ if .LastCommit}}
             <div class="flex items-end gap-2">
               <span  class="text text-gray-500 dark:text-gray-400 mr-6">{{ .LastCommit.Message }}</span>
-              <time class="text-xs text-gray-500 dark:text-gray-400">{{ timeFmt .LastCommit.When }}</time>
+              <span class="text-xs text-gray-500 dark:text-gray-400">{{ template "repo/fragments/time" .LastCommit.When }}</span>
             </div>
             {{ end }}
         </div>
