--- a/appview/pages/templates/settings.html
+++ b/appview/pages/templates/settings.html
@@ -39,7 +39,7 @@
           {{ i "key" "w-3 h-3 dark:text-gray-300" }}
           <p class="font-bold dark:text-white">{{ .Name }}</p>
         </div>
-        <p class="text-sm text-gray-500 dark:text-gray-400">added {{ .Created | timeFmt }}</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400">added {{ template "repo/fragments/time" .Created }}</p>
         <div class="overflow-x-auto whitespace-nowrap flex-1 max-w-full">
           <code class="text-sm text-gray-500 dark:text-gray-400">{{ .Key }}</code>
         </div>
@@ -112,7 +112,7 @@
             {{ end }}
           </div>
         </div>
-        <p class="text-sm text-gray-500 dark:text-gray-400">added {{ .CreatedAt | timeFmt }}</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400">added {{ template "repo/fragments/time" .CreatedAt }}</p>
       </div>
       <div class="flex gap-2 items-center">
         {{ if not .Verified }}
