--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -108,7 +108,7 @@
                         {{ $starrerHandle :=  index $.DidHandleMap .Star.StarredByDid }}
                         {{ $repoOwnerHandle :=  index $.DidHandleMap .Star.Repo.Did }}
                         <div class="flex items-center">
-                            <p class="text-gray-600 dark:text-gray-300 flex items-center gap-2">
+                            <p class="text-gray-600 dark:text-gray-300 flex flex-wrap items-center gap-2">
                                 {{ template "user/fragments/picHandle" $starrerHandle }}
                                 starred
                                 <a
